@@ -1,0 +1,2 @@
+INSERT INTO `psss_config_help` (`id`, `enabled`, `idx`, `title`, `content`, `img`, `weight`) VALUES
+(39, 1, 0, 'Winning Trades', '<p>There are two ways to acquire players in Scoresheet, one is through trades and one is through the draft.  Drafting well is the absolute bedrock for building a winning team, but trading well can put your team over the top.  So how do you \"win\" trades in Scoresheet Baseball?</p>\r\n\r\n<p>Let\'s start with the word \"win\".  One of the most common mistakes made when approaching trades is the idea that you need to \"win\" every trade that you make.  Scoresheet is a game with a very long \"play arc\" and the wisest and craftiest owners play the game as it if were chess, always trying to think several moves ahead of every other owner in their league.</p>\r\n\r\n<p>There are some who say that the team that gets the best player in a trade, has \"won\" the trade.  That\'s a good basis to start on, but that idea does not even begin to capture the subtleties of making trades in a Scoresheet league.  One thing you do not want to do is make a trade where the result is that the other owner never wants to make another trade with you.</p>\r\n\r\n<p>Trading in Scoresheet is a psychological and social game as well as a strategic game.  You want to trade, as much as possible, from strength to weakness.  In other words  you want to trade from a surplus your team may have, to shore up a deficit your team may have.  Sometimes it is also a good idea to allow another player to \"win\" a trade with you.</p>\r\n\r\n<p>Good will and friendship are a great foundation to build future trades on.</p>', 'chess_knight.webp', 0);
