@@ -181,4 +181,5 @@ INSERT INTO `psss_config_help` (`id`, `enabled`, `idx`, `title`, `content`, `img
         (35, 1, 75, 'How do I register for a user account in PsychoStats?', '<p>Clicking on the \"Login\" link in the top menu or the quick login icon will display a link that you can use to register a PsychoStats user account.</p>', 'register.webp', 0),
         (36, 1, 0, 'Scoresheet Trading Scams', '<p>Scoresheet waters are full of sharks.  Your best defence against scammers is to understand the tactics and strategies that they use.  Typical Scoresheet scams involve some combination of getting another player to accept a trade on the basis of inflated or dimished asset values.  What follows is a list of some of the more common Scoresheet trading scams.</p>\r\n\r\n<ul>\r\n<li><b>Hospice Scam:</b>  In this scam the owner trades an injured player to another owner who is unaware of the injury status of the player involved.  This is perhaps the oldest scam in the book, and one that has a good chance of ending up with an officially reversed trade.  Always, always, always check up on the injury status of players involved in a trade before you make a trade, including players you are trading.  A fast way to check injury status is to do a search for \"cbs fantasy news [player name]\"</li><br>\r\n\r\n<li><b>Evil Twin Scam:</b>  This is a scam where an owner switches the target player of the opposing owner with another player with the same name.  This is one of the dirtiest trading tricks in the game and will absolutely result in a reversed trade when caught.  Always, always, always double and triple check trades before you confirm them.  Make sure player names match, and player numbers match.</li><br>\r\n\r\n<li><b>Matching Round Scam:</b>  This is a scam where an owner switches a later pick in a round for an earlier pick, where that owner has multiple picks to trade from the same round.  As is the case with many \"scams\", it isn\'t always intentional, accidents do happen.  Always, always, always, double and triple check to make sure that, not only are you receiving your desired pick, but you are actually trading the pick you intended to trade.</li><br>\r\n\r\n<li><b>Bullshit Baffles Brains/Kitchen Sink Scam:</b>  This is a scam where an owner attempts to trade many low value players for one high value player.  \"I threw everything, including the kitchen sink, at that trade!\"</li><br>\r\n\r\n<li><b>Hot Catcher Scam:</b>  Where an owner attempts to trade a catcher who is on a hot hitting streak, but is unlikely to keep hitting that way.  It isn\'t always a catcher, but often it is.  Everyone needs catchers, and catchers tend to run hot and cold, moreso than other positions, in part because catcher is one of the most physically and mentally demanding positions to play, and as a corollary to that, they don\'t get as many regular at bats as other hitters.</li><br>\r\n\r\n<li><b>Hot Baby Scam:</b>  This is a variation on the \"Hot Catcher Scam\".  It\'s cagey and requires smart scouting and an in depth understanding of what is happening in MLB\'s minor leagues.  In this case Sir Shark drafts a number of minor leaguers that are not super high end prospects, solid but unspectacular.  Hitters don\'t just get hot in the majors, they do that in the minors as well.  Sir Shark waits for his minor leaguers to get hot, and attract some buzz, then trades them while their value is high.  The key to this scam, and what makes it a scam, is that the perpetrator doesn\'t expect the hot streak to last, and Sir Shark is usually right.</li><br>\r\n\r\n<li><b>Fading Star Scam:</b>  Where an owner attempts to get another owner to overpay for a former star who is in a funk that appears likely to last for the rest of his career.</li><br>\r\n\r\n<li><b>One Foot in the Grave/Retirement Scam:</b>  Similar to the \"Fading Star Scam\" this is where an owner attempts to get another player to overpay for a star player whose days of meaningful contribution are over and who is on the verge of retiring.  Hey, we all have our favourite players!</li><br>\r\n\r\n<li><b>\"And One\" Draft Pick Scam:</b>  It goes something like this, \"Sure we can make that trade, but I can\'t do that trade straight up.  I\'ll need a little something extra to make it work...\"  Just throw in that rd 30, or rd 35...  Meanwhile that low round draft pick allows Sir Shark to protect yet another hot prospect who will probably be worth more than any of the other players involved in that trade.</li><br>\r\n\r\n<li><b>Prospect Capital Scams:</b>  In a lot of leagues in Scoresheet \"hot prospects\" are treated like currency.  They are probably years away from being productive major league players, and they are one of the most overvalued assets in the game.</li><br>\r\n\r\n<li><b>Amateur Draft Round Scams:</b>  In most leagues in Scoresheet the supplemental rounds where the players from that season\'s MLB amateur draft first become available are considered to be among the most valuable draft picks of the season.  It is common for veteran owners to prey on less experienced owners and \"acquire\" those picks for far less than their accepted value.  \"Supp picks aren\'t worth much, but I\'ll help you out...\"</li><br>\r\n\r\n<li><b>Undervalued Draft Pick Scams:</b>  When you  trade a pick for a player, it is a multi-asset trade.  You are trading that pick, and getting a player in return presumably for the current season, if you trade away the pick during the off season, the deal becomes even more unbalanced.  You are trading away the player you would have picked for that player.  If you end up protecting that player, you are also trading away the player you would have protected in that player\'s place.  Not only that, but you are going to be down a player for the entire next season.<br><br>\r\n\r\nIf it\'s a late round pick it may appear that that pick doesn\'t have much value, although useful, productive players are always available, so there is no such thing as a draft pick that has no value.  But more importantly, late round draft picks are used to protect minor league prospects, which can have a great deal of value.  So that rd 30 - 35 \"throw in\" can afford the owner who receives it a great deal of value, and should not be offered lightly.</li>\r\n</ul>', '', 0),
         (37, 1, 0, 'Amateur Draft Round', '<p>The supplemental draft that includes the amateur draft rounds is one of the highlights of the Scoresheet year.  It is the round of supplemental drafts when the players from that year\'s MLB amateur draft become available.  Those draft picks are typically very valuable, especially in \"BL\" leagues.</p>\r\n\r\n<p>In previous years that draft round was rounds 40 and 41, in recent years it has been rounds 42 and 43.  Starting in 2024 those rounds will be round 45 and 46.</p>\r\n\r\n<p><a href=\"https://commons.wikimedia.org/wiki/File:World_Series_Trophy_(48262268286).jpg\">Erik Drost</a>, <a href=\"https://creativecommons.org/licenses/by/2.0\">CC BY 2.0</a>, via Wikimedia Commons</p>', 'ws_trophy.jpg', 0),
-        (38, 1, 0, 'Blood Dolls', '<p>Every league has them.  \"Blood dolls\" are the owners that enable owners with dominant teams to maintain their dominance.  You might not notice them when they make a trade, and specific trades might not seem unbalanced, but when you add all the trades they make with their \"vampire\" up, you will see a repeated pattern of trades that favour the dominant team.  Typically there will be a common thread, something the \"vampire\" offers that the \"blood doll\" finds irresistible.</p>\r\n\r\n<p>The results will also be consistent.  The vampire team will consistently be a top team in the league, while the blood doll team will flounder.  Do you want your team to be a \"blood doll\" for a dominant team?  Probably not...</p>', 'blood_doll.webp', 0);
+        (38, 1, 0, 'Blood Dolls', '<p>Every league has them.  \"Blood dolls\" are the owners that enable owners with dominant teams to maintain their dominance.  You might not notice them when they make a trade, and specific trades might not seem unbalanced, but when you add all the trades they make with their \"vampire\" up, you will see a repeated pattern of trades that favour the dominant team.  Typically there will be a common thread, something the \"vampire\" offers that the \"blood doll\" finds irresistible.</p>\r\n\r\n<p>The results will also be consistent.  The vampire team will consistently be a top team in the league, while the blood doll team will flounder.  Do you want your team to be a \"blood doll\" for a dominant team?  Probably not...</p>', 'blood_doll.webp', 0),
+        (39, 1, 0, 'Winning Trades', '<p>There are two ways to acquire players in Scoresheet, one is through trades and one is through the draft.  Drafting well is the absolute bedrock for building a winning team, but trading well can put your team over the top.  So how do you \"win\" trades in Scoresheet Baseball?</p>\r\n\r\n<p>Let\'s start with the word \"win\".  One of the most common mistakes made when approaching trades is the idea that you need to \"win\" every trade that you make.  Scoresheet is a game with a very long \"play arc\" and the wisest and craftiest owners play the game as it if were chess, always trying to think several moves ahead of every other owner in their league.</p>\r\n\r\n<p>There are some who say that the team that gets the best player in a trade, has \"won\" the trade.  That\'s a good basis to start on, but that idea does not even begin to capture the subtleties of making trades in a Scoresheet league.  One thing you do not want to do is make a trade where the result is that the other owner never wants to make another trade with you.</p>\r\n\r\n<p>Trading in Scoresheet is a psychological and social game as well as a strategic game.  You want to trade, as much as possible, from strength to weakness.  In other words  you want to trade from a surplus your team may have, to shore up a deficit your team may have.  Sometimes it is also a good idea to allow another player to \"win\" a trade with you.</p>\r\n\r\n<p>Good will and friendship are a great foundation to build future trades on.</p>', 'chess_knight.webp', 0);
